--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,40 @@
 {
-	"name" : "inanepain/view",
-	"description" : "View layer with models for most common of content types.",
-	"type" : "library",
-	"license" : "UNLICENSE",
-	"authors" : [{
-			"name" : "Philip Michael Raab",
-			"email" : "peep@inane.co.za",
-			"role" : "Developer"
-		}
-	],
-	"homepage" : "http://vaieen.local:8000/inane/view",
-	"readme": "README.md",
-	"support" : {
-		"email" : "peep@inane.co.za",
-		"issues" : "https://inane.co.za"
-	},
-	"keywords" : [
-		"inane",
-		"view"
-	],
-	"autoload" : {
-		"psr-4" : {
-			"Inane\\View\\" : "src/"
-		}
-	},
-	"config": {
-        "preferred-install" : "dist",
-		"optimize-autoloader" : true,
-		"discard-changes" : true,
-		"sort-packages": true
+    "name": "inanepain/view",
+    "description": "View layer with models for most common of content types.",
+    "type": "library",
+    "license": "UNLICENSE",
+    "homepage": "http://vaieen.local:3000/inane/view",
+    "readme": "README.md",
+    "authors": [
+        {
+            "name": "Philip Michael Raab",
+            "email": "peep@inane.co.za",
+            "role": "Developer"
+        }
+    ],
+    "support": {
+        "email": "peep@inane.co.za",
+        "issues": "http://vaieen.local:3000/iane"
     },
-	"require-dev": {
+    "keywords": [
+        "inane",
+        "view"
+    ],
+    "autoload": {
+        "psr-4": {
+            "Inane\\View\\": "src/"
+        }
     },
-	"require" : {
-		"php" : ">=8.1",
-		"inanepain/stdlib": "* || dev-master || dev-develop"
-	}
+    "config": {
+        "preferred-install": "dist",
+        "optimize-autoloader": true,
+        "discard-changes": true,
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=8.1",
+        "inanepain/stdlib": "* || dev-master || dev-develop"
+    },
+    "require-dev": {}
 }
