--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,19 @@
     "name": "inanepain/view",
     "description": "View layer with models for most common of content types.",
     "type": "library",
-    "license": "UNLICENSE",
-    "homepage": "http://vaieen.local:3000/inane/view",
+    "license": "Unlicense",
+    "homepage": "https://github.com/inanepain/view",
     "readme": "README.md",
     "authors": [
         {
             "name": "Philip Michael Raab",
-            "email": "peep@inane.co.za",
+            "email": "philip@cathedral.co.za",
             "role": "Developer"
         }
     ],
     "support": {
-        "email": "peep@inane.co.za",
-        "issues": "http://vaieen.local:3000/iane"
+        "email": "philip@cathedral.co.za",
+        "issues": "https://github.com/inanepain"
     },
     "keywords": [
         "inane",
