- icon - doc structure

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,11 @@
     "scripts": {
         "mk-doc-dir": [
             "mkdir -p doc/{changelog,readme}",
-            "mkdir doc/changelog/release"
+            "mkdir doc/changelog/release",
+            "mkdir doc/readme/part",
+            "touch doc/{changelog,readme}/index.adoc",
+            "touch doc/changelog/release/0.0.0.adoc",
+            "touch doc/readme/part/install.adoc"
         ],
         "build": [
             "@build-changelog",
