--- a/composer.json
+++ b/composer.json
@@ -49,14 +49,18 @@
             "touch doc/readme/part/install.adoc"
         ],
         "build": [
+            "echo \"Library: inanepain/$(basename $(pwd))\"",
+            "echo build: all...",
             "@build-changelog",
-            "@build-readme"
+            "@build-readme",
+            "echo build: done!"
         ],
 		"build-win": [
 			"@build-changelog-win",
 			"@build-readme-win"
 		],
         "build-changelog": [
+            "echo building: changelog...",
             "rm -f CHANGELOG.adoc",
             "asciidoctor-reducer -o CHANGELOG.adoc doc/changelog/index.adoc",
             "asciidoctor -b docbook CHANGELOG.adoc",
@@ -69,6 +73,7 @@
 			"del CHANGELOG.xml"
 		],
         "build-readme": [
+            "echo building: readme...",
             "rm -f README.adoc",
             "asciidoctor-reducer -o README.adoc doc/readme/index.adoc",
             "asciidoctor -b docbook README.adoc",
